--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -1,13 +1,13 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">PartDesign Workbench/cs</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="cs" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-PartDesign+Workbench&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../id/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign Workbench (1% translated)" lang="id" dir="ltr">Bahasa Indonesia</a></li>
-<li><a href="../de/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Arbeitsbereich PartDesign (85% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Arbeitsbereich PartDesign (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../PartDesign_Workbench.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="PartDesign Workbench (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Par&ccedil;a Tasar&#305;m Tezgah&#305; (8% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--med" title="Ambiente de trabajo Dise&ntilde;oPiezas (48% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Atelier PartDesign (85% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Atelier PartDesign (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Dizajniranje dijelova Radni stol (5% translated)" lang="hr" dir="ltr">hrvatski</a></li>
-<li><a href="../it/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Ambiente Part Design (85% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="&#346;rodowisko pracy Projekt Cz&#281;&#347;ci (85% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../it/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Ambiente Part Design (98% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="../pl/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="&#346;rodowisko pracy Projekt Cz&#281;&#347;ci (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Bancada de trabalho Desenho de Pe&ccedil;as (PartDesign) (1% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Bancada de trabalho PartDesign (85% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign Workbench/Atelierul de PartDesign (8% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -21,7 +21,7 @@
 <li><a href="../zh-cn/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="&#38646;&#20214;&#35774;&#35745;&#24037;&#20316;&#21488; (1% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../zh-tw/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="&#38646;&#20214;&#22346; (1% translated)" lang="zh-Hant-TW" dir="ltr">&#20013;&#25991;&#65288;&#33274;&#28771;&#65289;</a></li>
 <li><a href="../ja/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--med" title="&#12497;&#12540;&#12488;&#12487;&#12470;&#12452;&#12531;&#12527;&#12540;&#12463;&#12505;&#12531;&#12481; (24% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
-<li><a href="../ko/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="&#48512;&#54408;&#49444;&#44228; &#51089;&#50629;&#45824; (82% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
+<li><a href="../ko/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="PartDesign(&#48512;&#54408;&#49444;&#44228;) &#51089;&#50629;&#45824; (84% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_Part.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Part_Workbench.html" title="Part Workbench">Part Workbench</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_Points.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Points_Workbench.html" title="Points Workbench">Points Workbench</a>
@@ -157,10 +157,10 @@
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
 <ul><li><b><a href="../cs/Getting_started.html" title="Getting started/cs">Getting started</a></b></li>
 <li><b>Installation:</b> <a href="../cs/Download.html" title="Download/cs">Download</a>, <a href="../cs/Installing_on_Windows.html" title="Installing on Windows/cs">Windows</a>, <a href="../cs/Installing_on_Linux.html" title="Installing on Linux/cs">Linux</a>, <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Mac</a>, <a href="../cs/Installing_additional_components.html" title="Installing additional components/cs">Additional components</a>, <a href="../index.php?title=Compile_on_Docker/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Compile on Docker/cs (page does not exist)">Docker</a>, <a href="../index.php?title=AppImage/cs&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/cs (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/cs (page does not exist)">Ubuntu Snap</a></li>
-<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../index.php?title=Selection_methods/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Selection methods/cs (page does not exist)">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
+<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../cs/Selection_methods.html" title="Selection methods/cs">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
 <hr>
 <ul><li><b>Help:</b> <a href="../cs/Tutorials.html" title="Tutorials/cs">Tutorials</a>, <a href="../cs/Video_tutorials.html" title="Video tutorials/cs">Video tutorials</a></li>
-<li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../index.php?title=Std_Base/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Base/cs (page does not exist)">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../index.php?title=Material_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Material Workbench/cs (page does not exist)">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a class="mw-selflink selflink">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../index.php?title=Testing/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/cs (page does not exist)">Test Framework</a></li></ul>
+<li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../cs/Std_Base.html" title="Std Base/cs">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../cs/Material_Workbench.html" title="Material Workbench/cs">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a class="mw-selflink selflink">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../index.php?title=Testing/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/cs (page does not exist)">Test Framework</a></li></ul>
 <hr>
 <ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../index.php?title=External_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="External workbenches/cs (page does not exist)">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
 <hr>
@@ -185,34 +185,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251121121022
+Cached time: 20260111233955
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.274 seconds
-Real time usage: 0.420 seconds
+CPU time usage: 0.212 seconds
+Real time usage: 0.349 seconds
 Preprocessor visited node count: 459/1000000
 Post&#8208;expand include size: 15393/2097152 bytes
 Template argument size: 5162/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4397/5000000 bytes
+Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.487      1 -total
- 34.61%   13.321      1 Template:PartDesign_Tools_navi/cs
- 24.41%    9.394      1 Template:Userdocnavi/cs
- 15.26%    5.875      2 Template:Navigation_menu_2
-  9.59%    3.689      1 Template:TOCright
-  8.36%    3.217      2 Template:Docnav
-  6.98%    2.687      5 Template:VersionPlus
-  6.95%    2.676      1 Template:Version
-  6.33%    2.438      1 Template:MenuCommand
+100.00%   32.114      1 -total
+ 32.16%   10.328      1 Template:Userdocnavi/cs
+ 23.58%    7.573      1 Template:PartDesign_Tools_navi/cs
+ 19.01%    6.105      2 Template:Navigation_menu_2
+ 12.42%    3.989      2 Template:Docnav
+  9.45%    3.034      1 Template:MenuCommand
+  6.87%    2.205      5 Template:VersionPlus
+  5.48%    1.760      1 Template:TOCright
+  5.34%    1.715      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20251121121022 and revision id 1698785. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260111233955 and revision id 1698785. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
